# crypto_exc_all

./: .gitignore  Cargo.toml  README.md  notes.md  task_plan.md
binance_rs/: Cargo.toml  README.md
binance_rs/examples/: account_balance.rs  live_post_only_order.rs  user_stream_listen_key.rs  websocket_public_stream.rs  websocket_split_hub.rs
binance_rs/src/: client.rs  config.rs  error.rs  lib.rs  utils.rs
binance_rs/src/api/: api_trait.rs  mod.rs
binance_rs/src/api/account/: account_api.rs  mod.rs
binance_rs/src/api/announcements/: announcements_api.rs  mod.rs
binance_rs/src/api/asset/: asset_api.rs  mod.rs
binance_rs/src/api/market/: market_api.rs  mod.rs
binance_rs/src/api/trade/: mod.rs  trade_api.rs
binance_rs/src/api/websocket/: mod.rs  websocket_api.rs
binance_rs/src/dto/account/: account_dto.rs  mod.rs
binance_rs/src/dto/market/: market_dto.rs  mod.rs
binance_rs/tests/: announcements_api_tests.rs  api_tests.rs  asset_api_tests.rs  client_tests.rs  expanded_api_tests.rs  okx_gap_api_tests.rs  utils_tests.rs  websocket_api_tests.rs
bitget_rs/: Cargo.toml  README.md
bitget_rs/examples/: account_accounts.rs  live_bitget_post_only_order.rs
bitget_rs/src/: client.rs  config.rs  error.rs  lib.rs  utils.rs
bitget_rs/src/api/: account.rs  announcements.rs  asset.rs  market.rs  mod.rs  trade.rs  websocket.rs
bitget_rs/tests/: api_tests.rs
docs/: exchange-integration-playbook.md
docs/plans/: 2026-04-20-binance-futures-sdk.md  2026-04-20-bitget-sdk-aggregation.md
examples/: unified_market.rs
okx_rs/: Cargo.toml
okx_rs/examples/: asset.rs
okx_rs/src/: config.rs
okx_rs/src/api/account/: account_api.rs
okx_rs/src/api/market/: market_api.rs
okx_rs/src/api/public_data/: public_data_api.rs
okx_rs/src/api/trade/: trade_api.rs
okx_rs/src/dto/account/: account_dto.rs
okx_rs/src/websocket/: channel.rs  client.rs  manager.rs  mod.rs
src/: account.rs  config.rs  error.rs  exchange.rs  fill.rs  instrument.rs  lib.rs  margin.rs  market.rs  order.rs  position.rs  sdk.rs  trade.rs
src/adapters/: binance.rs  bitget.rs  mod.rs  okx.rs
tests/: external_consumer_tests.rs
