[package]
name = "crypto_exc_all"
version = "0.1.1"
edition = "2024"
description = "Unified cryptocurrency exchange SDK facade"
license = "MIT"

[workspace]
members = [
    "okx_rs",
    "binance_rs",
    "bitget_rs",
]
resolver = "2"

[features]
default = ["okx", "binance", "bitget"]
okx = ["dep:okx_rs"]
binance = ["dep:binance_rs"]
bitget = ["dep:bitget_rs"]

[dependencies]
binance_rs = { package = "bnb_rs", version = "0.1.0", path = "binance_rs", optional = true }
bitget_rs = { version = "0.1.0", path = "bitget_rs", optional = true }
okx_rs = { package = "okx", version = "0.2.1", path = "okx_rs", optional = true }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
