[package]
name = "bnb_rs"
version = "0.1.0"
edition = "2024"
description = "Binance USDⓈ-M Futures SDK"
license = "MIT"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
hmac = "0.12.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.4"

[dev-dependencies]
mockito = "1.7.0"
